ws0427 - initial upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,25 @@
 server.port=80
 
 #Oracle Database Setting
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=user01
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@172.16.21.88:1521:xe
+## 아래 코드는 sql에서 로그를 찍기 위해 4-5번 라인을 대체함.
+
+###멘토님 DB 코드
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@172.16.21.88:1521/xe
+#spring.datasource.username=system
+#spring.datasource.password=robbins4bos
+
+###성영누나 DB 코드
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@172.16.21.55:1521/xe
+spring.datasource.username=shop
 spring.datasource.password=111111
 
 #Mybatis Framework Setting
 mybatis.type-aliases-package=com.kbstar.dto
-mybatis.mapper-locations=com/kbstar/mybatis/*.xml 
+mybatis.mapper-locations=/mybatis/*.xml 
 
 #Log 기록 저장
 #window : imgdir=file:///C:/projectimg/uimg/
